Change the style of the app and configure prettier and eslint

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
   </head>
-  <body class="bg-slate-400 min-h-screen min-w-screen grid place-items-center">
+  <body class="bg-[#252422] min-h-screen min-w-screen grid place-items-center">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
