Change the over all styles of the application

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Todo App</title>
   </head>
   <body class="bg-[#252422] min-h-screen min-w-screen flex justify-center">
-    <div id="root"></div>
+    <div id="root" class="w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
